--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
